Added a basic navbar and an image...

--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+<head>
+<title>Lewis McMillan's website</title>
+</head>
+<head>
+<style>
+body {margin: 0;}
+
+.center {
+  margin: auto;
+  width: 60%;
+  border: 3px solid #73AD21;
+  padding: 10px;
+}
+
+
+ul.topnav {
+  list-style-type: none;
+  margin: auto;
+  width: 17%;
+  overflow: hidden;
+  border: 3px solid #e7e7e7;
+  background-color: #f3f3f3;
+}
+
+ul.topnav li {float: left;}
+
+ul.topnav li a {
+  display: block;
+  color: #666;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+ul.topnav li a:hover:not(.active) {background-color: #ddd;}
+
+ul.topnav li a.active {color: white; background-color: #4CAF50;}
+
+ul.topnav li.right {float: right;}
+
+@media screen and (max-width: 600px) {
+  ul.topnav li.right, 
+  ul.topnav li {float: none;}
+}
+</style>
+</head>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+<ul class="topnav">
+  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="projects.html">Projects</a></li>
+  <li><a href="contact.html">Contact</a></li>
+  <li><a href="about.html">About</a></li>
+</ul>
+<h1>Under Construction</h1>
+<img src="376223.png" alt="Point Sources interfering" style="max-width:100%;height:auto;">
+
+</body>
+</html>
