--- a/cv/index.html
+++ b/cv/index.html
@@ -93,7 +93,8 @@ navbar-dark bg-dark
 <div class="line"><strong>Projects:</strong></div>
 </div>
 <ul class="simple">
-<li><p>Modelling of wave phenomena in Monte Carlo radiative transfer. - Simulation of laser tissue ablation.</p></li>
+<li><p>Modelling of wave phenomena in Monte Carlo radiative transfer.</p></li>
+<li><p>Simulation of laser tissue ablation.</p></li>
 <li><p>Modelling of tissue autofluorescence for novel biomarkers for cardiovascular disease.</p></li>
 </ul>
 <div class="line-block">
