--- a/cv/index.html
+++ b/cv/index.html
@@ -148,7 +148,7 @@ Assistant supervisor for 14 undergraduate dissertations at BSc, MPhys, and MSci 
 <li><p>I.R.M. Barnard, E. Eadie, L. McMillan, H. Moseley, T. Brown, K. Wood, R. Dawe, Could psoralen plus ultraviolet A1 (PUVA1) work? Depth penetration achieved by phototherapy lamps. British Journal of Dermatology 2019.</p></li>
 <li><p>I.R.M. Barnard, P. Tierney, C.L. Campbell, L. McMillan, H. Moseley, E. Eadie, C.T.A. Brown, K. Wood, Quantifying Direct DNA Damage in the Basal Layer of Skin Exposed to UV Radiation from Sunbeds. Journal of Photochemistry and Photobiology, Volume 94, Issue 5, pp 1017-1025.</p></li>
 <li><p>L Mcmillan, P. O’Mahoney, K. Feng, K. Zhou, I.R.M. Barnard, C. Li, S. Ibbotson, E. Eadie, C.T.A. Brown, and K. Wood, Development of a predictive Monte Carlo radiative transfer model for ablative fractional skin laser, Lasers in Surgery and Medicine 2020</p></li>
-<li><p>C.S. Oedekoven,, L. McMillan, S. Fatima, D. Harris-Birtill, C. Faustino, L. Marshall, S.T. Buckland, and C.E. Lennert-Cody, Trial survey for eastern tropical Pacific dolphins: Project report, IATTC Special Report, No. 24.<\p><\li>
+<li><p>C.S. Oedekoven,, L. McMillan, S. Fatima, D. Harris-Birtill, C. Faustino, L. Marshall, S.T. Buckland, and C.E. Lennert-Cody, Trial survey for eastern tropical Pacific dolphins: Project report, IATTC Special Report, No. 24.</p></li>
 </ul>
 <p><strong>Currently in review:</strong></p>
 <ul class="simple">
